Got the Valkey Glide client to work (not in JPMS) with a simple example